# amplifier-app-repo-weaver

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  bundle.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml
behaviors/: repo-weaver.yaml
docs/: architecture.dot  leverage-levels.dot
docs/designs/: repo-weaver-design.md
eval/: README.md  __init__.py  coverage_check.py  held_back.yaml  held_back_temporal.yaml  multi_repo.yaml  questions.yaml  run_questions.py  trace_grounding.py
modules/tool-repo-weaver/: pyproject.toml
modules/tool-repo-weaver/amplifier_module_tool_repo_weaver/: __init__.py
modules/tool-repo-weaver/tests/: test_mount.py
pipelines/: repo-weaver-smoke.dot  repo-weaver-smoke.resolver.yaml  repo-weaver-sync.dot  repo-weaver-sync.resolver.yaml
policy/: schema.md
repo_weaver/: __init__.py  _version.py  _version_resolve.py  cli.py  gitio.py  materialize.py  sync.py  updater.py  weave.py
repo_weaver/policy/: schema.md
repo_weaver/themes/: default.json
tests/: test_build_dashboard.py  test_changed_since_api.py  test_cli_dispatch.py  test_cross_repo_refs.py  test_discovery_and_retry.py  test_doctor_key_logic.py  test_fetch_guard.py  test_grounding_normalization.py  test_hatch_build.py  test_incremental_collision.py  test_no_overlong_lines.py  test_notable_commits.py  test_org_scoped_qualifier.py  test_path_contract.py  test_pr_discussion_and_issues.py  test_pr_url_in_digest.py  test_prod_readiness.py  test_public_api.py  test_repo_attribution.py  test_resume_and_classify.py  test_retry.py  test_sync_command.py  test_trailer_stripping.py  test_updater.py  test_version_resolve.py
